# eval-fusion

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  ROADMAP.md  eval-fusion.code-workspace  pyproject.toml  setup.ps1  setup.py  setup.sh
eval_fusion/: format.py  pyproject.toml  setup.py
eval_fusion/core/: pyproject.toml
eval_fusion/infrastructure/eval/deepeval/: Pipfile
eval_fusion/infrastructure/eval/phoenix/: Pipfile
eval_fusion/infrastructure/eval/ragas/: Pipfile
eval_fusion/infrastructure/eval/trulens/: Pipfile
libs/community/bench/: pyproject.toml
libs/community/deepeval/: README.md  pyproject.toml
libs/community/deepeval/eval_fusion_deepeval/: __init__.py  em.py  embedding_model.py  embedding_model_adapter.py  evaluator.py  llm.py  llm_adapter.py
libs/community/deepeval/eval_fusion_deepeval/metrics/: __init__.py  metrics.py
libs/community/llama_index/: pyproject.toml
libs/community/llama_index/eval_fusion_llama_index/: __init__.py  em.py  evaluator.py  llm.py
libs/community/llama_index/eval_fusion_llama_index/metrics/: __init__.py  metrics.py
libs/community/mlflow/: README.md  pyproject.toml
libs/community/mlflow/eval_fusion_mlflow/: __init__.py  evaluator.py  llm.py
libs/community/mlflow/eval_fusion_mlflow/constants/: __init__.py  constants.py
libs/community/mlflow/eval_fusion_mlflow/metrics/: __init__.py  metrics.py
libs/community/mlflow/eval_fusion_mlflow/utils/connections/: __init__.py  health.py
libs/community/mlflow/eval_fusion_mlflow/utils/processes/: __init__.py  close.py  open.py  run.py
libs/community/phoenix/: README.md  pyproject.toml
libs/community/phoenix/eval_fusion_phoenix/: __init__.py  evaluator.py  llm.py
libs/community/phoenix/eval_fusion_phoenix/metrics/: __init__.py  metrics.py
libs/community/ragas/: README.md  pyproject.toml
libs/community/ragas/eval_fusion_ragas/: __init__.py  em.py  embedding_model.py  evaluator.py  llm.py
libs/community/ragas/eval_fusion_ragas/metrics/: __init__.py  metrics.py
libs/community/ragchecker/: pyproject.toml
libs/community/ragchecker/eval_fusion_ragchecker/: __init__.py  evaluator.py  llm.py
libs/community/ragchecker/eval_fusion_ragchecker/metrics/: metrics.py
libs/community/tonic_validate/: pyproject.toml
libs/community/tonic_validate/eval_fusion_tonic_validate/: __init__.py  evaluator.py  llm.py
libs/community/tonic_validate/eval_fusion_tonic_validate/metrics/: __init__.py  metrics.py
libs/community/trulens/: README.md  pyproject.toml
libs/community/trulens/eval_fusion_trulens/: __init__.py  evaluator.py  llm.py
libs/community/trulens/eval_fusion_trulens/constants/: __init__.py  constants.py
libs/community/trulens/eval_fusion_trulens/metrics/: __init__.py  metrics.py
libs/core/: pyproject.toml
libs/core/eval_fusion_core/: __init__.py
libs/core/eval_fusion_core/abstractions/: __init__.py  embedding.py  embedding_model.py  llm.py
libs/core/eval_fusion_core/base/: __init__.py  em.py  evaluator.py  llm.py  metric.py
libs/core/eval_fusion_core/enums/: __init__.py  feature.py  tag.py
libs/core/eval_fusion_core/exceptions/: __init__.py  exception.py
libs/core/eval_fusion_core/models/: __init__.py  evaluation.py  evaluator.py  input.py  metric.py  output.py  settings.py  test_set.py  usage.py
libs/core/eval_fusion_core/models/settings/: __init__.py  settings.py
libs/core/eval_fusion_core/utils/: __init__.py
libs/core/eval_fusion_core/utils/loaders/: __init__.py  loader.py
libs/streamlit/: pyproject.toml
libs/streamlit/assets/: sidebar.css
libs/streamlit/eval_fusion_streamlit/: Home.py  eval_fusion.py
libs/streamlit/eval_fusion_streamlit/constants/: const.py  main.py  page1.py  page2.py  texts.py  texts_main.py  texts_page1.py  texts_page2.py  texts_page3.py
libs/streamlit/eval_fusion_streamlit/data/: validate.py
libs/streamlit/eval_fusion_streamlit/pages/: 1_1️⃣_Upload_Dataset.py  2_2️⃣_Choose_metrics.py  3_3️⃣_View_Results.py
libs/streamlit/eval_fusion_streamlit/src/: evaluation.py  validation.py
libs/streamlit/eval_fusion_streamlit/src/components/: chart.py  record_container.py  sidebar.py  table.py
libs/test/: .deepeval_telemtry.txt  README.md  config.yaml  default.sqlite  pyproject.toml
libs/test/assets/: amnesty_qa.json  einstein_qa.json
libs/test/eval_fusion_test/settings/: __init__.py  settings.py
libs/test/eval_fusion_test/utils/: __init__.py  loader.py
libs/test/eval_fusion_test/utils/nvidia/: __init__.py  llm.py
libs/test/eval_fusion_test/utils/openai/: llm.py
libs/test/eval_fusion_test/utils/vertexai/: __init__.py  llm.py
libs/test/notebooks/: main.ipynb
libs/test/tests/: __init__.py  test_evaluator.py
libs/test/tests/deepeval/: test_evaluator.py
libs/test/tests/mlflow/: __init__.py  test_evaluator.py
libs/test/tests/phoenix/: test_evaluator.py
libs/test/tests/ragas/: test_evaluator.py
libs/test/tests/trulens/: test_evaluator.py
libs/tests/: pyproject.toml
libs/tests/assets/: amnesty_qa.json
libs/tests/eval_fusion_tests/: test_evaluator.py  vertex_ai_embedding_model.py
src/: setup.py
