[tool.poetry]
name = "eval_fusion"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"
packages = [{ include = "eval_fusion" }, { include = "eval_fusion/core" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"
commitizen = "^4.1.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
include = ["pyproject.toml", "eval_fusion/**/*.py"]
exclude = [".git", ".vscode", ".idea", "build", "dist"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
