[tool.poetry]
name = "eval_fusion"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 88
include = ["**/pyproject.toml", "**.py"]
exclude = [".git", ".vscode", ".idea", "build", "dist"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
