[project]                                  
name = "eval_fusion"                      
version = "0.1.0"                         
description = ""                          
readme = "README.md"                      
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]  
requires-python = ">=3.9,<3.13"           

dependencies = [
    "pyyaml>=6.0.2,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4,<1.0.0",
    "pre-commit>=4.0.1,<5.0.0",
]

[tool.ruff]
line-length = 88
include = ["**/pyproject.toml", "**.py"]
exclude = [".git", ".vscode", ".idea", "build", "dist"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
