[tool.poetry]
name = "eval-fusion-core"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"
packages = [{ include = "eval_fusion_core" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
