[project]
name = "eval-fusion-core"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]

dependencies = [
  "pydantic>=2.10.4,<3.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
