[project]
name = "eval-fusion-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13,!=3.9.7"
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]

dependencies = [
  "eval-fusion-core",
  "eval-fusion-deepeval",
  "eval-fusion-ragas",
  "eval-fusion-trulens",
  "eval-fusion-phoenix",
  "eval-fusion-mlflow",
  "eval-fusion-llama-index",
  "eval-fusion-tonic-validate",
  "eval-fusion-openai",
  "eval-fusion-vertexai",
  "python-decouple>=3.8,<4.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
]

[tool.uv.sources]
eval-fusion-core = { path = "../core", editable = true }
eval-fusion-deepeval = { path = "../community/deepeval", editable = true }
eval-fusion-ragas = { path = "../community/ragas", editable = true }
eval-fusion-trulens = { path = "../community/trulens", editable = true }
eval-fusion-phoenix = { path = "../community/phoenix", editable = true }
eval-fusion-mlflow = { path = "../community/mlflow", editable = true }
eval-fusion-llama-index = { path = "../community/llama_index", editable = true }
eval-fusion-tonic-validate = { path = "../community/tonic_validate", editable = true }
eval-fusion-openai = { path = "../vendor/openai", editable = true }
eval-fusion-vertexai = { path = "../vendor/vertexai", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
