[tool.poetry]
name = "eval-fusion-deepeval"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"
packages = [{ include = "eval_fusion_deepeval" }]

[tool.poetry.dependencies]
python = "^3.12"
eval-fusion-core = { path = "../../core", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
