[tool.poetry]
name = "eval-fusion-deepeval"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"
packages = [{ include = "eval_fusion_deepeval" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
eval-fusion-core = { path = "../../core", develop = true }
deepeval = "2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
