[tool.poetry]
name = "eval-fusion-llama-index"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
eval-fusion-core = { path = "../../core", develop = true }
llama-index = "^0.12.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
