[project]
name = "eval-fusion-llama-index"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]

dependencies = [
  "eval-fusion-core",
  "llama-index>=0.12.52,<0.13.0",
]

[tool.uv.sources]
eval-fusion-core = { path = "../../core", editable = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
