[tool.poetry]
name = "eval-fusion-mlflow"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
eval-fusion-core = { path = "../../core", develop = true }
mlflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
