[tool.poetry]
name = "eval-fusion-ragchecker"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
eval-fusion-core = { path = "../../core", develop = true }
ragchecker = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
