[project]
name = "eval-fusion-ragchecker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]

dependencies = [
  "eval-fusion-core",
  "ragchecker>=0.1.9,<0.2.0",
]

[tool.uv.sources]
eval-fusion-core = { path = "../../core", editable = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
