[tool.poetry]
name = "eval-fusion-trulens"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13,!=3.9.7"
eval-fusion-core = { path = "../../core", develop = true }
trulens = "^1.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
