[project]
name = "eval-fusion-trulens"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13,!=3.9.7"
authors = [
  { name = "Luka958", email = "lp53523@fer.hr" },
]

dependencies = [
  "eval-fusion-core",
  "trulens>=2.1.1,<3.0.0",
]

[tool.uv.sources]
eval-fusion-core = { path = "../../core", editable = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
